# cg-solarsystem

Fase4-Grupo14/: README.txt
Fase4-Grupo14/Engine/code/: CMakeLists.txt  catmullrom.h  main.cpp
Fase4-Grupo14/Generator/: aux_func.cpp  aux_func.h  bezier.cpp  bezier.h  figures.cpp  figures.h  main.cpp
Fase4-Grupo14/Unix-Engine/code/: CMakeLists.txt  catmullrom.cpp  classTag.h  main.cpp
Fase4-Grupo14/exemplos/Figures/: cone.3d  crown.3d  figures.xml
Fase4-Grupo14/exemplos/SolarSystem/: solarsystem.xml
