cmake_minimum_required(VERSION 2.8)

# Project Name
PROJECT(Engine)

if (NOT APPLE)
	if (WIN32)
		set(TOOLKITS_FOLDER "" CACHE PATH "Path to toolkits folder")
		include_directories(
			${TOOLKITS_FOLDER}/glew
			${TOOLKITS_FOLDER}/glut
			${TOOLKITS_FOLDER}/devil)
		link_directories(
			${TOOLKITS_FOLDER}/glew
			${TOOLKITS_FOLDER}/glut
			${TOOLKITS_FOLDER}/devil)
	else(WIN32)
		find_package(GLEW REQUIRED)
		include_directories(${GLEW_INCLUDE_DIRS})
		link_libraries(${GLEW_LIBRARIES})
	endif(WIN32)
endif(NOT APPLE)

if (NOT WIN32)
	find_package(GLUT REQUIRED)
	include_directories(${GLUT_INCLUDE_DIR})
	link_directories(${GLUT_LIBRARY_DIRS})
	add_definitions(${GLUT_DEFINITIONS})

	find_package(DevIL REQUIRED)
	link_libraries(${IL_LIBRARIES} )
	include_directories(ยง{IL_INCLUDE_DIR})
endif(NOT WIN32)	
	
find_package(OpenGL REQUIRED)
include_directories(${OpenGL_INCLUDE_DIRS})
link_directories(${OpenGL_LIBRARY_DIRS})
add_definitions(${OpenGL_DEFINITIONS})

add_executable(${PROJECT_NAME} main.cpp catmullrom.cpp)

if (WIN32)
	target_link_libraries(${PROJECT_NAME} ${OPENGL_LIBRARIES} glut32 glew32 DevIL)
	file(COPY ${TOOLKITS_FOLDER}/glew/glew32.dll DESTINATION ${CMAKE_BINARY_DIR})
	file(COPY ${TOOLKITS_FOLDER}/glut/glut32.dll DESTINATION ${CMAKE_BINARY_DIR})
	file(COPY ${TOOLKITS_FOLDER}/devil/DevIL.dll DESTINATION ${CMAKE_BINARY_DIR})
	file(COPY ${CMAKE_SOURCE_DIR}/../../exemplos/SolarSystem/2k_jupiter.jpg DESTINATION ${CMAKE_BINARY_DIR})
	file(COPY ${CMAKE_SOURCE_DIR}/../../exemplos/SolarSystem/2k_neptune.jpg DESTINATION ${CMAKE_BINARY_DIR})
	file(COPY ${CMAKE_SOURCE_DIR}/../../exemplos/SolarSystem/2k_saturn.jpg DESTINATION ${CMAKE_BINARY_DIR})
	file(COPY ${CMAKE_SOURCE_DIR}/../../exemplos/SolarSystem/2k_sun.jpg DESTINATION ${CMAKE_BINARY_DIR})
	file(COPY ${CMAKE_SOURCE_DIR}/../../exemplos/SolarSystem/2k_uranus.jpg DESTINATION ${CMAKE_BINARY_DIR})
	file(COPY ${CMAKE_SOURCE_DIR}/../../exemplos/SolarSystem/asteroid.jpg DESTINATION ${CMAKE_BINARY_DIR})
	file(COPY ${CMAKE_SOURCE_DIR}/../../exemplos/SolarSystem/asteroid2.png DESTINATION ${CMAKE_BINARY_DIR})
	file(COPY ${CMAKE_SOURCE_DIR}/../../exemplos/SolarSystem/deimos.jpg DESTINATION ${CMAKE_BINARY_DIR})
	file(COPY ${CMAKE_SOURCE_DIR}/../../exemplos/SolarSystem/earth_daymap.jpg DESTINATION ${CMAKE_BINARY_DIR})
	file(COPY ${CMAKE_SOURCE_DIR}/../../exemplos/SolarSystem/europa.jpg DESTINATION ${CMAKE_BINARY_DIR})
	file(COPY ${CMAKE_SOURCE_DIR}/../../exemplos/SolarSystem/iapetus.jpg DESTINATION ${CMAKE_BINARY_DIR})
	file(COPY ${CMAKE_SOURCE_DIR}/../../exemplos/SolarSystem/io.jpg DESTINATION ${CMAKE_BINARY_DIR})
	file(COPY ${CMAKE_SOURCE_DIR}/../../exemplos/SolarSystem/mars.jpg DESTINATION ${CMAKE_BINARY_DIR})
	file(COPY ${CMAKE_SOURCE_DIR}/../../exemplos/SolarSystem/mercurymap.jpg DESTINATION ${CMAKE_BINARY_DIR})
	file(COPY ${CMAKE_SOURCE_DIR}/../../exemplos/SolarSystem/moon.jpg DESTINATION ${CMAKE_BINARY_DIR})
	file(COPY ${CMAKE_SOURCE_DIR}/../../exemplos/SolarSystem/phobos2k.jpg DESTINATION ${CMAKE_BINARY_DIR})
	file(COPY ${CMAKE_SOURCE_DIR}/../../exemplos/SolarSystem/rhea.jpg DESTINATION ${CMAKE_BINARY_DIR})
	file(COPY ${CMAKE_SOURCE_DIR}/../../exemplos/SolarSystem/saturn_ring.jpg DESTINATION ${CMAKE_BINARY_DIR})
	file(COPY ${CMAKE_SOURCE_DIR}/../../exemplos/SolarSystem/solarsystem.xml DESTINATION ${CMAKE_BINARY_DIR})
	file(COPY ${CMAKE_SOURCE_DIR}/../../exemplos/SolarSystem/stars.tif DESTINATION ${CMAKE_BINARY_DIR})
	file(COPY ${CMAKE_SOURCE_DIR}/../../exemplos/SolarSystem/teapot.jpg DESTINATION ${CMAKE_BINARY_DIR})
	file(COPY ${CMAKE_SOURCE_DIR}/../../exemplos/SolarSystem/titan.jpg DESTINATION ${CMAKE_BINARY_DIR})
	file(COPY ${CMAKE_SOURCE_DIR}/../../exemplos/SolarSystem/triton.jpg DESTINATION ${CMAKE_BINARY_DIR})
	file(COPY ${CMAKE_SOURCE_DIR}/../../exemplos/SolarSystem/uranus_rings.png DESTINATION ${CMAKE_BINARY_DIR})
	file(COPY ${CMAKE_SOURCE_DIR}/../../exemplos/SolarSystem/venusmap.jpg DESTINATION ${CMAKE_BINARY_DIR})
	file(COPY ${CMAKE_SOURCE_DIR}/../../exemplos/Figures/belt.3d DESTINATION ${CMAKE_BINARY_DIR})
	file(COPY ${CMAKE_SOURCE_DIR}/../../exemplos/Figures/big_sphere.3d DESTINATION ${CMAKE_BINARY_DIR})
	file(COPY ${CMAKE_SOURCE_DIR}/../../exemplos/Figures/box.3d DESTINATION ${CMAKE_BINARY_DIR})
	file(COPY ${CMAKE_SOURCE_DIR}/../../exemplos/Figures/cone.3d DESTINATION ${CMAKE_BINARY_DIR})
	file(COPY ${CMAKE_SOURCE_DIR}/../../exemplos/Figures/crate.png DESTINATION ${CMAKE_BINARY_DIR})
	file(COPY ${CMAKE_SOURCE_DIR}/../../exemplos/Figures/crown.3d DESTINATION ${CMAKE_BINARY_DIR})
	file(COPY ${CMAKE_SOURCE_DIR}/../../exemplos/Figures/cylinder.3d DESTINATION ${CMAKE_BINARY_DIR})
	file(COPY ${CMAKE_SOURCE_DIR}/../../exemplos/Figures/donut.jpg DESTINATION ${CMAKE_BINARY_DIR})
	file(COPY ${CMAKE_SOURCE_DIR}/../../exemplos/Figures/ellipsoid.3d DESTINATION ${CMAKE_BINARY_DIR})
	file(COPY ${CMAKE_SOURCE_DIR}/../../exemplos/Figures/figures.xml DESTINATION ${CMAKE_BINARY_DIR})
	file(COPY ${CMAKE_SOURCE_DIR}/../../exemplos/Figures/plane.3d DESTINATION ${CMAKE_BINARY_DIR})
	file(COPY ${CMAKE_SOURCE_DIR}/../../exemplos/Figures/sphere.3d DESTINATION ${CMAKE_BINARY_DIR})
	file(COPY ${CMAKE_SOURCE_DIR}/../../exemplos/Figures/teapot.3d DESTINATION ${CMAKE_BINARY_DIR})
	file(COPY ${CMAKE_SOURCE_DIR}/../../exemplos/Figures/torus.3d DESTINATION ${CMAKE_BINARY_DIR})


else(WIN32)
	target_link_libraries(${PROJECT_NAME} ${OPENGL_LIBRARIES} ${GLUT_LIBRARY})
endif (WIN32)
